--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,16 @@
 .row{
   display: flex;
   justify-content: space-between;
+  
+}
+
+.col{
+  flex-grow: 1;
+  
+}
+
+.col:last-child{
+  margin-left: 20px;
 }
 
 @media screen and (max-width: 768px) {
@@ -21,10 +31,15 @@
 
    .col{
     margin-bottom: 25px;
+    
    }
 
    .container{
     padding-left: 20px;
     padding-right: 20px;
    }
+
+   .col:last-child{
+    margin-left: 0;
+  }
 }
