--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -1,10 +1,14 @@
+.hero-section{
+    color: white;
+    padding-top: 35px;
+    padding-bottom: 35px;
+}
 .hero-col-1{
     width: 37%;
 }
 
 .hero-col-1-text{
     line-height: 20px;
-    font-size: larger;
 }
 
 .hero-top{
@@ -27,8 +31,8 @@
 }
 
 .hero-card{
-    background-color: blue;
-    color: white;
+    background-color: white;
+    color: black;
     border-radius: 5px;
     font-weight: 700;
     padding-top: 20px;
